Ajustes en los iconos de elementos TAB y definición de la base para la ayuda de referencia para SEMVIZ.

--- a/inst/appweb/www/ayuda/semviz.html
+++ b/inst/appweb/www/ayuda/semviz.html
@@ -1,22 +1,23 @@
 <html>
 
 <head>
-<title>Title</title>
+<title>SEMVIZ</title>
 </head>
 
 <body>
-
-<p>This is an R HTML document. When you click the <b>Knit HTML</b> button a web page will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:</p>
-
-<!--begin.rcode
-summary(cars)
-end.rcode-->
-
-<p>You can also embed plots, for example:</p>
-
-<!--begin.rcode fig.width=7, fig.height=6
-plot(cars)
-end.rcode-->
-
+Autor: <br/>
+Carlos Alberto Pérez Moncada<br/>
+Correo electrónico:<br/>
+carlos.perez7@udea.edu.co / carlos.perezoft@gmail.com<br/>
+<br/>
+Director del Proyecto: John Freddy Duitama<br/>
+CO-Director del Proyecto: Juan Delgado Lastra<br/>
+Grupo de Investigación: Ingeniería y Software<br/>
+Programa: Maestría en Ingeniería con énfasis en Informática<br/>
+<p>
+- GPLv3 Licence.<br/>
+- Copyright © 2019 U. de A.<br/>
+- Medellín - Colombia.<br/>
+</p>
 </body>
 </html>
